Pages folder added+ collapse errors corrected

--- a/src/styles/Collapse.css
+++ b/src/styles/Collapse.css
@@ -1,24 +1,24 @@
-.Collapse_info {
+.collapse_info {
     background: #FF6060;
     display: flex;
     justify-content: space-between;
     border-radius: 5px;
     height: 30px;
 }
-.Collapse_info>p {
+.collapse_info>p {
     color: white;
     font-size: 13px;
     margin: 7px 0px 0px 11px;
     margin-left: 11px;
     
 }
-.Collapse_chevron {
+.collapse_chevron {
     margin-top: 10px;
     margin-right: 10px;
     height: 10px;
     width: 16px;
 }
-.text_Collapse {
+.text_collapse {
     background: #F7F7F7;
     border-radius: 0px 0px 5px 5px;
     padding: 23px 72px 5px 11px;
@@ -29,20 +29,20 @@
 
 
 @media screen and (min-width:992px) {
-    .Collapse_info {
+    .collapse_info {
         height: 47px;
     }
-    .Collapse_info>p {
+    .collapse_info>p {
         font-size: 24px;
         margin: 8px 0px 0px 18px;
     }    
-    .Collapse_chevron {
+    .collapse_chevron {
         margin-top: 16px;
         margin-right: 33px;
         height: 15px;
         width: 24px;
     }
-    .text_Collapse {
+    .text_collapse {
         border-radius: 0px 0px 10px 10px;
         padding: 40px 12px 27px 20px;
         font-size: 18px;
