--- a/src/styles/Lodging.css
+++ b/src/styles/Lodging.css
@@ -41,11 +41,11 @@
 .infos {
     margin: 0px 20px 0px 20px;
 }
-.Collapses {
+.collapses {
     margin-bottom: 20px;
     width: 100%;
 }
-.Collapse {
+.collapse {
     background: #FF6060;
     font-size: 13px;
     color: white;
@@ -103,7 +103,7 @@
         flex-wrap: wrap;
         justify-content: space-between;
     }
-    .infos>.Collapses {
+    .infos>.collapses {
         width: calc(50% - 3%);
         margin-bottom: 20px;
     }
